--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@ body {
   background-color: #f1f1f1;
 }
 
+main {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
 .message {
   text-align: center;
   margin-top: 10px;
@@ -32,4 +38,10 @@ a.post {
   &:hover {
     background-color: #ddd;
   }
+}
+
+.posts-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1rem;
 }
